<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayoutDocent"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/stroke">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewNaamDocent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/naam_docent"
            android:layout_marginRight="5dp"
            android:textStyle="bold"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewVoornaamDocent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/voornaam_docent"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textviewEmailDocent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/email"
        android:textSize="12sp"
       />

</LinearLayout>